name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            Chris N Julie
license:             BSD3
license-file:        LICENSE
author:              Chris Allen and Julie Moronuki
maintainer:          haskellbook.com
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                    ,data/dict.txt

library
  hs-source-dirs:      lib
  exposed-modules:     Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split

executable hangman-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hangman


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            tests.hs
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >= 4.7 && < 5
                    , hangman
                    , QuickCheck
